--- a/index.html
+++ b/index.html
@@ -155,6 +155,77 @@
       section { padding: 4rem 2rem; }
       .gallery img, .series-gallery img { height: 400px; }
     }
+
+    /* Floating book button + modal */
+    .book-now-btn {
+      position: fixed;
+      right: 1.5rem;
+      bottom: 1.5rem;
+      z-index: 1000;
+      background: linear-gradient(135deg,#ff6b6b,#ff8e53);
+      color: #fff;
+      border: none;
+      padding: 0.85rem 1.1rem;
+      font-weight: 700;
+      border-radius: 999px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.35);
+      cursor: pointer;
+      transition: transform 200ms ease, box-shadow 200ms ease, opacity 200ms ease;
+      font-size: 0.95rem;
+    }
+    .book-now-btn:hover { transform: translateY(-4px); box-shadow: 0 12px 30px rgba(0,0,0,0.45); }
+    .book-now-btn:focus { outline: 3px solid rgba(255,255,255,0.12); }
+
+    @media (max-width: 480px) {
+      .book-now-btn { right: 1rem; bottom: 1rem; padding: 0.7rem 0.9rem; font-size: 0.9rem; }
+    }
+
+    .modal-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.6);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 1100;
+      padding: 2rem;
+    }
+    .modal-overlay.active { display: flex; }
+    .modal {
+      background: #0f0f0f;
+      color: #f5f5f5;
+      max-width: 540px;
+      width: 100%;
+      border-radius: 8px;
+      padding: 1.25rem;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.6);
+      border: 1px solid rgba(255,255,255,0.04);
+    }
+    .modal header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem; }
+    .modal h4 { margin: 0; font-size: 1.25rem; font-family: var(--display-font); }
+    .modal .close { background: transparent; border: 0; color: #f5f5f5; font-size: 1.2rem; cursor: pointer; }
+    .modal form { display: flex; flex-direction: column; gap: 0.75rem; }
+    .modal input, .modal textarea {
+      background: rgba(255,255,255,0.03);
+      border: 1px solid rgba(255,255,255,0.06);
+      color: inherit;
+      padding: 0.75rem;
+      border-radius: 6px;
+      font-size: 0.95rem;
+    }
+    .modal textarea { min-height: 120px; resize: vertical; }
+    .modal .submit {
+      margin-top: 0.5rem;
+      background: #f5f5f5;
+      color: #0f0f0f;
+      padding: 0.8rem;
+      border-radius: 6px;
+      font-weight: 700;
+      border: 0;
+      cursor: pointer;
+    }
+    .modal .hint { font-size: 0.85rem; opacity: 0.8; margin-top: 0.25rem; }
+
   </style>
 </head>
 <body>
@@ -222,6 +293,50 @@
           localStorage.setItem('displayFont', v);
         });
       }
+
+      /* Booking modal / button handlers */
+      const bookNowBtn = document.getElementById('bookNowBtn');
+      const bookModal = document.getElementById('bookModal');
+
+      const openBookModal = () => {
+        if (!bookModal) return;
+        bookModal.classList.add('active');
+        bookModal.setAttribute('aria-hidden', 'false');
+        document.body.style.overflow = 'hidden';
+        const first = bookModal.querySelector('input[name="name"]');
+        setTimeout(() => first?.focus(), 50);
+      };
+      const closeBookModal = () => {
+        if (!bookModal) return;
+        bookModal.classList.remove('active');
+        bookModal.setAttribute('aria-hidden', 'true');
+        document.body.style.overflow = '';
+        bookNowBtn?.focus();
+      };
+
+      bookNowBtn?.addEventListener('click', openBookModal);
+      bookModal?.querySelector('.close')?.addEventListener('click', closeBookModal);
+      bookModal?.addEventListener('click', (e) => {
+        if (e.target === bookModal) closeBookModal();
+      });
+      document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape' && bookModal?.classList.contains('active')) closeBookModal();
+      });
+
+      const bookForm = bookModal?.querySelector('form');
+      bookForm?.addEventListener('submit', (e) => {
+        e.preventDefault();
+        const fd = new FormData(bookForm);
+        const name = fd.get('name') || '';
+        const email = fd.get('email') || '';
+        const date = fd.get('date') || '';
+        const message = fd.get('message') || '';
+        const subject = `Booking request from ${name || 'Website Visitor'}`;
+        const body = `Name: ${name}\nEmail: ${email}\nPreferred date: ${date}\n\n${message}`;
+        const mailto = `mailto:boudich@live.com.ph?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+        window.location.href = mailto;
+        closeBookModal();
+      });
     });
   </script>
 
@@ -265,5 +380,27 @@
   </section>
 
   <footer>&copy; 2025 Bo Moldenhauer Photography, NYC. All rights reserved.</footer>
+
+  <!-- Floating "Book Now" button -->
+  <button id="bookNowBtn" class="book-now-btn" aria-haspopup="dialog" aria-controls="bookModal">BOOK NOW!</button>
+
+  <!-- Booking modal -->
+  <div id="bookModal" class="modal-overlay" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="bookModalTitle">
+    <div class="modal" role="document">
+      <header>
+        <h4 id="bookModalTitle">Book a Session</h4>
+        <button class="close" aria-label="Close modal">&times;</button>
+      </header>
+      <form>
+        <input name="name" type="text" placeholder="Your name" required />
+        <input name="email" type="email" placeholder="Your email" required />
+        <input name="date" type="text" placeholder="Preferred date (optional)" />
+        <textarea name="message" placeholder="Tell me about your project or questions..."></textarea>
+        <button type="submit" class="submit">Send Booking Request</button>
+        <div class="hint">This will open your email client to send a booking request to boudich@live.com.ph</div>
+      </form>
+    </div>
+  </div>
+
 </body>
 </html>
